fix: hero-wrap mobile padding/margin 수정

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -200,7 +200,7 @@ html, body {
 }
 /* 헤더가 fixed라 상단 여백 확보 */
 .hero-wrap{
-  padding-top: calc(var(--header-height) + 64px); /* header 높이 + 추가 여백 */
+  padding-top: calc(var(--header-height) + 60px); /* header 높이 + 추가 여백 */
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 64px;
@@ -213,7 +213,7 @@ html, body {
     margin: 0 auto;
     background: var(--gradient-pp);
     border-radius: 28px;
-    padding: 82px 48px;
+    padding: 82px 48px 78px 48px;
     /*box-shadow: 0 10px 20px rgba(0,0,0,.10);*/
     text-align: center;
   }
